# stm32f746g-disco-template-cmake

./: .gitignore  CMakeLists.txt  README.md  STM32F7XX.cmake
Application/: application.c  application.h
Inc/: lcd_log_conf.h  main.h
Src/: main.c
Toolchain/: README.md
startup/: syscalls.c
